@@ -1,5 +1,6 @@
 package com.sscanner.team.trashcan.service;
 
+import com.sscanner.team.global.configure.aop.TimeTrace;
 import com.sscanner.team.trashcan.entity.Trashcan;
 import com.sscanner.team.trashcan.entity.TrashcanDocument;
 import com.sscanner.team.trashcan.repository.TrashcanDocumentRepository;
@@ -9,7 +10,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @RequiredArgsConstructor
 @Service
@@ -21,12 +22,13 @@ public class TrashcanDocumentService {
         return documentRepository.save(document);
     }
 
+    @TimeTrace
     public List<TrashcanSearchResponseDto> findByRoadNameAddress(String roadNameAddress) {
 
         return documentRepository.findByRoadNameAddressContaining(roadNameAddress)
                 .stream()
                 .map(TrashcanSearchResponseDto::from)  // 팩토리 메서드를 사용하여 변환
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void saveTrashcanDocuments(List<Trashcan> trashcans) {
